fix(backend): harden staged pack lifecycle and concurrency safety